# osql

./: .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml  docs  readthedocs.yml  release-pipeline.yml  this_is_a_test_pr
cmake/: CPackConfig.cmake.in  globals.cmake  options.cmake  packaging.cmake  utilities.cmake
cmake/wix_patches/: osquery_service_install.xml
osquery/: CMakeLists.txt
osquery/carver/: CMakeLists.txt
osquery/carver/tests/: CMakeLists.txt
osquery/config/: CMakeLists.txt
osquery/config/parsers/: CMakeLists.txt
osquery/config/parsers/tests/: CMakeLists.txt
osquery/config/plugins/: CMakeLists.txt
osquery/config/tests/: CMakeLists.txt
osquery/core/: CMakeLists.txt
osquery/core/plugins/: CMakeLists.txt
osquery/core/sql/: CMakeLists.txt
osquery/core/tests/: CMakeLists.txt
osquery/database/: CMakeLists.txt
osquery/database/plugins/: CMakeLists.txt
osquery/database/plugins/tests/: CMakeLists.txt
osquery/database/tests/: CMakeLists.txt
osquery/devtools/: CMakeLists.txt
osquery/devtools/tests/: CMakeLists.txt
osquery/dispatcher/: CMakeLists.txt
osquery/dispatcher/tests/: CMakeLists.txt
osquery/distributed/: CMakeLists.txt
osquery/distributed/plugins/: CMakeLists.txt
osquery/distributed/tests/: CMakeLists.txt
osquery/ev2/: CMakeLists.txt
osquery/events/: CMakeLists.txt
osquery/events/linux/probes/: CMakeLists.txt
osquery/events/linux/probes/tests/: CMakeLists.txt
osquery/events/tests/: CMakeLists.txt
osquery/experimental/: CMakeLists.txt
osquery/experimental/events_stream/: CMakeLists.txt
osquery/experimental/tracing/: CMakeLists.txt
osquery/experimental/tracing/linux/: CMakeLists.txt
osquery/experimental/tracing/linux/tests/: CMakeLists.txt
osquery/extensions/: CMakeLists.txt
osquery/extensions/tests/: CMakeLists.txt
osquery/extensions/thrift/: CMakeLists.txt
osquery/filesystem/: CMakeLists.txt
osquery/hashing/: CMakeLists.txt
osquery/killswitch/: CMakeLists.txt
osquery/killswitch/plugins/: CMakeLists.txt
osquery/killswitch/tests/: CMakeLists.txt
osquery/logger/: CMakeLists.txt
osquery/logger/plugins/: CMakeLists.txt
osquery/logger/plugins/tests/: CMakeLists.txt
osquery/logger/tests/: CMakeLists.txt
osquery/main/: CMakeLists.txt
osquery/numeric_monitoring/: CMakeLists.txt
osquery/numeric_monitoring/plugins/: CMakeLists.txt
osquery/numeric_monitoring/plugins/tests/: CMakeLists.txt
osquery/numeric_monitoring/tests/: CMakeLists.txt
osquery/process/: CMakeLists.txt
osquery/profiler/: CMakeLists.txt
osquery/registry/: CMakeLists.txt
osquery/registry/tests/: CMakeLists.txt
osquery/remote/: CMakeLists.txt
osquery/remote/enroll/: CMakeLists.txt
osquery/remote/serializers/: CMakeLists.txt
osquery/remote/tests/: CMakeLists.txt
osquery/remote/transports/: CMakeLists.txt
osquery/sdk/: CMakeLists.txt
osquery/sdk/tests/: CMakeLists.txt
osquery/sql/: CMakeLists.txt
osquery/sql/tests/: CMakeLists.txt
osquery/system/: CMakeLists.txt
osquery/system/network/: CMakeLists.txt
osquery/system/network/tests/: CMakeLists.txt
osquery/tables/: CMakeLists.txt
osquery/tables/applications/: CMakeLists.txt
osquery/tables/applications/posix/tests/: CMakeLists.txt
osquery/tables/cloud/: CMakeLists.txt
osquery/tables/events/: CMakeLists.txt
osquery/tables/events/tests/: CMakeLists.txt
osquery/tables/forensic/: CMakeLists.txt
osquery/tables/lldpd/: CMakeLists.txt
osquery/tables/networking/: CMakeLists.txt
osquery/tables/networking/tests/: CMakeLists.txt
osquery/tables/sleuthkit/: CMakeLists.txt
osquery/tables/smart/: CMakeLists.txt
osquery/tables/smart/tests/: CMakeLists.txt
osquery/tables/system/: CMakeLists.txt
osquery/tables/system/tests/: CMakeLists.txt
osquery/tables/utility/: CMakeLists.txt
osquery/tables/yara/: CMakeLists.txt
osquery/tables/yara/tests/: CMakeLists.txt
osquery/utils/: CMakeLists.txt
osquery/utils/aws/: CMakeLists.txt
osquery/utils/aws/tests/: CMakeLists.txt
osquery/utils/caches/: CMakeLists.txt
osquery/utils/caches/tests/: CMakeLists.txt
osquery/utils/config/: CMakeLists.txt
osquery/utils/conversions/: CMakeLists.txt
osquery/utils/debug/: CMakeLists.txt
osquery/utils/error/: CMakeLists.txt
osquery/utils/expected/: CMakeLists.txt
osquery/utils/info/: CMakeLists.txt
osquery/utils/json/: CMakeLists.txt
osquery/utils/macros/: CMakeLists.txt
osquery/utils/schemer/: CMakeLists.txt
osquery/utils/schemer/json/: CMakeLists.txt
osquery/utils/schemer/json/tests/: CMakeLists.txt
osquery/utils/schemer/tests/: CMakeLists.txt
osquery/utils/status/: CMakeLists.txt
osquery/utils/system/: CMakeLists.txt
osquery/utils/system/linux/: CMakeLists.txt
osquery/utils/system/linux/ebpf/: CMakeLists.txt
osquery/utils/system/linux/ebpf/tests/: CMakeLists.txt
osquery/utils/system/linux/perf_event/: CMakeLists.txt
osquery/utils/system/linux/proc/: CMakeLists.txt
osquery/utils/system/linux/proc/tests/: CMakeLists.txt
osquery/utils/system/linux/tracing/: CMakeLists.txt
osquery/utils/system/linux/tracing/tests/: CMakeLists.txt
osquery/utils/versioning/: CMakeLists.txt
osquery/utils/versioning/tests/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/config/: CMakeLists.txt
plugins/config/parsers/: CMakeLists.txt
plugins/config/parsers/tests/: CMakeLists.txt
plugins/database/: CMakeLists.txt
plugins/database/tests/: CMakeLists.txt
plugins/distributed/: CMakeLists.txt
plugins/killswitch/: CMakeLists.txt
plugins/killswitch/tests/: CMakeLists.txt
plugins/logger/: CMakeLists.txt
plugins/logger/tests/: CMakeLists.txt
plugins/numeric_monitoring/: CMakeLists.txt
plugins/numeric_monitoring/tests/: CMakeLists.txt
plugins/remote/enroll/: CMakeLists.txt
sdk/: CMakeLists.txt
specs/: CMakeLists.txt
tests/: CMakeLists.txt
tests/integration/tables/: CMakeLists.txt
tools/: CMakeLists.txt
tools/codegen/: CMakeLists.txt
tools/tests/: CMakeLists.txt
